# clilint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clilint  dist-workspace.toml  lefthook.yml  mise.toml  pyproject.toml  release-plz-post-1.toml  release-plz.toml  rulesync.jsonc
.github/workflows/: ci.yml  prepare-release.yml  release-checks.yml  release.yml
.mise/tasks/: ci  format  lint  test
.rulesync/rules/: communication-style.md  overview.md
docs/: ai-assessments.md  design-explorations.md  installation.md  packages.md  prototype-comparison.md  releases.md  vision.md
fixtures/: README.md
fixtures/bad-cli/: badtool
fixtures/good-cli/: greet
integrations/: README.md
integrations/github-action/: README.md  action.yml  example-workflow.yml
integrations/pre-commit/: .pre-commit-hooks.yaml  README.md
openspec/: config.yaml
probes/: README.md  agent.py  basics.py  errors.py  help.py  output.py  robustness.py  version.py
prompts/: README.md  agent-guide.md  repair-loop.md
rules/: README.md  agent.json  basics.json  error.json  help.json  output.json  profiles.json  robustness.json  version.json
schemas/: README.md  report.schema.json  rule.schema.json
skills/: README.md
skills/assess-cli-help/: SKILL.md
spec/: README.md  cli-lint-0.1.md
src/: README.md  assessment.rs  cli.rs  engine.rs  lib.rs  main.rs  model.rs  package.rs  report.rs  runner.rs
src/clilint/: __init__.py  __main__.py  catalog.py  cli.py  engine.py  model.py  paths.py  (+2 more)
tests/: cli.rs  intentional_release_failure.rs  test_conformance.py
(+59 files in other folders)
